# CASIC-CAN-Stack-Integrity-Checker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
casic/: __init__.py
casic/cli/: __init__.py  config_runner.py  main.py  yaml_config.py
casic/core/: __init__.py  engine.py  models.py
casic/core/generator/: __init__.py  random_generator.py
casic/core/logging/: __init__.py  packet_logger.py
casic/core/mutation/: __init__.py  operators.py
casic/core/parser/: __init__.py  canopen_dictionary.py
casic/core/transport/: __init__.py  socketcan.py
casic/examples/: casic-indepth.yaml  casic.yaml  drive.xdd  module.xdc  node.eds
casic/protocols/: __init__.py
casic/protocols/canopen/: __init__.py  fuzzer.py
casic/protocols/j1939/: __init__.py  fuzzer.py
casic/protocols/raw_can/: __init__.py  fuzzer.py
casic/protocols/uds/: __init__.py  fuzzer.py
casic/tests/: test_canopen_constraints.py  test_cli.py  test_j1939_tp.py  test_mutation_and_replay.py  test_parser.py  test_runtime_controls.py  test_uds_awareness.py  test_yaml_runner.py
tools/: enable-casic.ps1  enable-casic.sh
